--- a/src/user/shell/Makefile
+++ b/src/user/shell/Makefile
@@ -1,51 +1,11 @@
-# Makefile for shell user program
+# SPDX-License-Identifier: MPL-2.0
 
-CC := gcc
-LD := ld
-
-BUILD_DIR := ../../../build
-OBJ_DIR := $(BUILD_DIR)/obj/user/shell
-BIN_DIR := $(BUILD_DIR)/bin/user
-LIB_DIR := $(BUILD_DIR)/lib
-
-INCLUDES := -I../../../include
-
-CFLAGS := -std=c2x -ffreestanding -nostdlib -fno-builtin -fno-stack-protector
-CFLAGS += -Wall -Wextra -Werror
-CFLAGS += -g -O2
-CFLAGS += $(INCLUDES)
-
-LDSCRIPT := ../libfutura/userland.ld
-CRT0 := $(LIB_DIR)/crt0.o
-LIBFUTURA := $(LIB_DIR)/libfutura.a
-
-SRCS := main.c
-OBJS := $(SRCS:%.c=$(OBJ_DIR)/%.o)
-
-TARGET := $(BIN_DIR)/shell
+SUBDIRS := futura-shell
 
 .PHONY: all clean
 
-all: $(TARGET)
-
-$(TARGET): $(OBJS) $(CRT0) $(LIBFUTURA) | $(BIN_DIR)
-	$(LD) -nostdlib -T $(LDSCRIPT) -o $@ $(CRT0) $(OBJS) $(LIBFUTURA)
-	@echo "Built shell: $@"
-
-$(OBJ_DIR)/%.o: %.c | $(OBJ_DIR)
-	$(CC) $(CFLAGS) -c $< -o $@
-
-$(CRT0):
-	@$(MAKE) -C ../libfutura all
-
-$(LIBFUTURA):
-	@$(MAKE) -C ../libfutura all
-
-$(OBJ_DIR):
-	@mkdir -p $(OBJ_DIR)
-
-$(BIN_DIR):
-	@mkdir -p $(BIN_DIR)
+all:
+	@for dir in $(SUBDIRS); do $(MAKE) -C $$dir all || exit 1; done
 
 clean:
-	@rm -rf $(OBJ_DIR) $(TARGET)
+	@for dir in $(SUBDIRS); do $(MAKE) -C $$dir clean || exit 1; done
