--- a/drivers/rust/.cargo/config.toml
+++ b/drivers/rust/.cargo/config.toml
@@ -3,3 +3,6 @@ target = "x86_64-unknown-linux-gnu"
 
 [target.x86_64-unknown-linux-gnu]
 rustflags = ["-C", "panic=abort"]
+
+[target.aarch64-unknown-linux-gnu]
+rustflags = ["-C", "panic=abort"]
