--- a/iso/boot/grub/grub.cfg
+++ b/iso/boot/grub/grub.cfg
@@ -7,7 +7,7 @@ set default=0
 
 menuentry "Futura OS" {
     echo "Loading Futura OS kernel..."
-    multiboot2 /boot/futura_kernel.elf
+    multiboot2 /boot/futura_kernel.elf fb=1
     echo "Booting kernel..."
     boot
 }
