Unify userland build system to support ARM64 compilation
Add PLATFORM support to src/user/Makefile to enable proper cross-compilation
for ARM64 and other platforms. The main userland build now correctly passes
PLATFORM to all subdirectory makefiles, allowing:
  make PLATFORM=arm64 userland
  make PLATFORM=x86_64 userland

Changes:
- Export PLATFORM variable from parent Makefile
- Pass PLATFORM to all submake invocations
- Update build messages to show target platform
- Default to x86_64 when PLATFORM not specified

This unifies scattered ARM64 build rules and enables clean, platform-agnostic
userland compilation. Previously, ARM64 binaries had to be built individually;
now they integrate seamlessly with the main build system.

--- a/src/user/Makefile
+++ b/src/user/Makefile
@@ -2,6 +2,10 @@
 # Copyright (c) 2025 Kelsi Davis
 # Licensed under MPL v2.0
 
+# Platform selection (inherited from parent Makefile)
+PLATFORM ?= x86_64
+export PLATFORM
+
 # Subdirectories
 USERLAND_DIRS := libfutura init shell cat echo wc fsd posixd futurawayd fbtest stubs services/winsrv apps/winstub
 
@@ -15,8 +19,8 @@ all: libfutura $(USERLAND_DIRS)
 init shell cat echo wc fsd posixd futurawayd fbtest services/winsrv apps/winstub: libfutura
 
 $(USERLAND_DIRS):
-	@echo "Building $@..."
-	@$(MAKE) -C $@ all
+	@echo "Building $@ for $(PLATFORM)..."
+	@$(MAKE) -C $@ all PLATFORM=$(PLATFORM)
 
 clean:
 	@for dir in $(USERLAND_DIRS); do \
