Refactor cat and wc utilities to use portable syscall wrapper
Apply the portable syscall header pattern to cat and wc utilities,
enabling ARM64 compilation while maintaining x86-64 compatibility.

- Update cat/Makefile and wc/Makefile for multi-platform support
  * Add platform detection and toolchain configuration
  * Support both x86-64 and ARM64 builds with appropriate CFLAGS
  * Use platform-specific linker scripts (userland_x86_64.ld, userland_arm64.ld)
  * Configure build directories to include platform identifier

- Refactor cat/main.c and wc/main.c
  * Replace hardcoded x86 syscall assembly with portable header
  * Remove platform-specific __NR_* definitions and inline assembly
  * Use syscall_portable.h for platform-agnostic syscall invocation

This establishes the refactoring pattern for remaining userland utilities
(init, shell, fbtest, etc.) to complete ARM64 userland support.

--- a/src/user/wc/Makefile
+++ b/src/user/wc/Makefile
@@ -1,19 +1,35 @@
 # Makefile for wc utility
 
+# Platform detection (defaults to x86_64 if not specified)
+PLATFORM ?= x86_64
+
+ifeq ($(PLATFORM),arm64)
+    CROSS_COMPILE ?= /opt/homebrew/bin/aarch64-elf-
+    CC := $(CROSS_COMPILE)gcc
+    LD := $(CROSS_COMPILE)gcc
+    ARCH_CFLAGS := -march=armv8-a -mtune=cortex-a53
+    LINKER_SCRIPT := ../libfutura/userland_arm64.ld
+else
+    CC := gcc
+    LD := gcc
+    ARCH_CFLAGS := -m64
+    LINKER_SCRIPT := ../libfutura/userland_x86_64.ld
+endif
+
 TARGET = wc
 OBJS = main.o
 
-CC = gcc
 CFLAGS = -std=c2x -ffreestanding -nostdlib -fno-builtin -fno-stack-protector \
          -Wall -Wextra -Werror -g -O2 -I../../../include
+CFLAGS += $(ARCH_CFLAGS)
 
-LD = ld
-LDFLAGS = -nostdlib -T ../libfutura/userland.ld
+# Use gcc as the linker with proper flags
+LDFLAGS = -nostdlib -Wl,-T,$(LINKER_SCRIPT) -Wl,--gc-sections
 
 BUILD_DIR = ../../../build
-OBJ_DIR = $(BUILD_DIR)/obj/user/$(TARGET)
+OBJ_DIR = $(BUILD_DIR)/obj/$(PLATFORM)/user/$(TARGET)
 BIN_DIR = $(BUILD_DIR)/bin/user
-LIB_DIR = $(BUILD_DIR)/lib
+LIB_DIR = $(BUILD_DIR)/lib/$(PLATFORM)
 
 all: $(BIN_DIR)/$(TARGET)
 
