Add platform detection to Wayland shell Makefile
Support multi-platform builds by adding platform detection to futura-shell
Makefile. Segregates object and library files by platform (x86_64/arm64) to
prevent build conflicts. Updates object directory and library paths to use
$(PLATFORM) variable.

Changes:
- Add PLATFORM ?= x86_64 for conditional compilation
- Update OBJ_DIR to use $(BUILD_ROOT)/obj/$(PLATFORM)/user/shell/futura-shell
- Update CRT0 and LIBFUTURA paths to use platform-segregated lib directories

This allows proper building of both x86-64 and ARM64 shell binaries.

--- a/src/user/shell/futura-shell/Makefile
+++ b/src/user/shell/futura-shell/Makefile
@@ -1,8 +1,11 @@
 # SPDX-License-Identifier: MPL-2.0
 
+# Platform detection (defaults to x86_64 if not specified)
+PLATFORM ?= x86_64
+
 ROOT := ../../../..
 BUILD_ROOT := $(ROOT)/build
-OBJ_DIR := $(BUILD_ROOT)/obj/user/shell/futura-shell
+OBJ_DIR := $(BUILD_ROOT)/obj/$(PLATFORM)/user/shell/futura-shell
 BIN_DIR := $(BUILD_ROOT)/bin/user
 
 include $(ROOT)/mk/wayland.mk
@@ -33,8 +36,8 @@ WAYLAND_LDFLAGS ?= -L$(WAYLAND_LIBDIR)
 WAYLAND_LIBS ?= -lwayland-server -lwayland-client -lffi -lpthread -lm -lrt
 
 LDSCRIPT := ../../libfutura/userland_$(PLATFORM).ld
-CRT0 := $(BUILD_ROOT)/lib/crt0.o
-LIBFUTURA := $(BUILD_ROOT)/lib/libfutura.a
+CRT0 := $(BUILD_ROOT)/lib/$(PLATFORM)/crt0.o
+LIBFUTURA := $(BUILD_ROOT)/lib/$(PLATFORM)/libfutura.a
 
 CFLAGS := -std=c2x -ffreestanding -nostdlib -fno-builtin -fno-stack-protector
 CFLAGS += -Wall -Wextra -Werror -g -O2
