Add platform detection to netd Makefile
- Add PLATFORM ?= x86_64 for multi-architecture support
- Add conditional toolchain configuration for ARM64 vs x86_64
- Update OBJ_DIR, BIN_DIR, LIB_DIR to include $(PLATFORM)
- Add platform-specific linker script and libgcc handling
- Add $(CRT0) and $(LIBFUTURA) build rules with PLATFORM propagation
- Update linker rules to use LIBGCC for ARM64 compatibility

--- a/src/user/netd/Makefile
+++ b/src/user/netd/Makefile
@@ -2,15 +2,28 @@
 # Copyright (c) 2025 Kelsi Davis
 # Licensed under MPL v2.0
 
-# Toolchain (use platform-specific compiler from main Makefile)
-CC ?= gcc
-LD ?= ld
-AR ?= ar
+# Platform detection (defaults to x86_64 if not specified)
+PLATFORM ?= x86_64
+
+# Toolchain (can be overridden by parent Makefile or command line)
+ifeq ($(PLATFORM),arm64)
+    CROSS_COMPILE ?= /opt/homebrew/bin/aarch64-elf-
+    CC := $(CROSS_COMPILE)gcc
+    LD := $(CROSS_COMPILE)ld
+    AR := $(CROSS_COMPILE)ar
+    ARCH_CFLAGS := -march=armv8-a -mtune=cortex-a53
+else
+    CC := gcc
+    LD := ld
+    AR := ar
+    ARCH_CFLAGS := -m64
+endif
 
 # Directories
 BUILD_DIR := ../../../build
-OBJ_DIR := $(BUILD_DIR)/obj/user/netd
-BIN_DIR := $(BUILD_DIR)/bin/user
+OBJ_DIR := $(BUILD_DIR)/obj/$(PLATFORM)/user/netd
+BIN_DIR := $(BUILD_DIR)/bin/$(PLATFORM)/user
+LIB_DIR := $(BUILD_DIR)/lib/$(PLATFORM)
 
 # Includes
 INCLUDES := -I../../../include
@@ -19,14 +32,23 @@ INCLUDES := -I../../../include
 CFLAGS := -std=c2x -ffreestanding -nostdlib -fno-builtin -fno-stack-protector
 CFLAGS += -Wall -Wextra -Werror
 CFLAGS += -g -O2
+CFLAGS += $(ARCH_CFLAGS)
 CFLAGS += $(INCLUDES)
 
 # Linker flags
-LDFLAGS := -nostdlib -static
+ifeq ($(PLATFORM),arm64)
+    LDSCRIPT := ../libfutura/userland_arm64.ld
+    LDFLAGS := -static -T $(LDSCRIPT)
+    LIBGCC := $(shell $(CC) -print-libgcc-file-name)
+else
+    LDSCRIPT := ../libfutura/userland.ld
+    LDFLAGS := -nostdlib -static -T $(LDSCRIPT)
+    LIBGCC :=
+endif
 
 # Libfutura paths
-CRT0 := $(BUILD_DIR)/lib/crt0.o
-LIBFUTURA := $(BUILD_DIR)/lib/libfutura.a
+CRT0 := $(LIB_DIR)/crt0.o
+LIBFUTURA := $(LIB_DIR)/libfutura.a
 
 # Source files
 SRCS := main.c netd_core.c
@@ -41,7 +63,7 @@ TARGET := $(BIN_DIR)/netd
 all: $(TARGET)
 
 $(TARGET): $(OBJS) $(CRT0) $(LIBFUTURA) | $(BIN_DIR)
-	$(LD) $(LDFLAGS) -o $@ $(CRT0) $(OBJS) $(LIBFUTURA)
+	$(LD) $(LDFLAGS) -o $@ $(CRT0) $(OBJS) $(LIBFUTURA) $(LIBGCC)
 	@echo "Built netd: $@"
 
 $(OBJ_DIR)/%.o: %.c | $(OBJ_DIR)
@@ -52,6 +74,12 @@ $(OBJ_DIR):
 
 $(BIN_DIR):
 	@mkdir -p $(BIN_DIR)
+
+$(CRT0):
+	@$(MAKE) -C ../libfutura PLATFORM=$(PLATFORM) all
+
+$(LIBFUTURA):
+	@$(MAKE) -C ../libfutura PLATFORM=$(PLATFORM) all
 
 clean:
 	rm -rf $(OBJ_DIR) $(TARGET)
