ARM64: Add platform detection to shell subsystem and fix buffer allocation
- Add PLATFORM variable detection to src/user/shell/Makefile
- Propagate PLATFORM to subdirectories (futura-shell)
- Replace hardcoded memory address with dynamic malloc() in main.c:1242
- Ensures ARM64 builds use platform-specific libraries correctly

--- a/src/user/shell/Makefile
+++ b/src/user/shell/Makefile
@@ -1,11 +1,13 @@
 # SPDX-License-Identifier: MPL-2.0
 
+PLATFORM ?= x86_64
+
 SUBDIRS := futura-shell
 
 .PHONY: all clean
 
 all:
-	@for dir in $(SUBDIRS); do $(MAKE) -C $$dir all || exit 1; done
+	@for dir in $(SUBDIRS); do $(MAKE) -C $$dir PLATFORM=$(PLATFORM) all || exit 1; done
 
 clean:
 	@for dir in $(SUBDIRS); do $(MAKE) -C $$dir clean || exit 1; done
