Fix Wayland compositor build issues
- Add AT_FDCWD definition to wayland_nofortify.h for openat() compatibility
- Fix compositor Makefile to include libfutura source directory
- Fix compositor main.c: remove duplicate O_RDWR/O_CREAT defines, add __NR_mkdir, add strerror stub
- Fix syscall_portable.h include path in main.c

--- a/src/user/compositor/futura-wayland/Makefile
+++ b/src/user/compositor/futura-wayland/Makefile
@@ -63,7 +63,7 @@ LIBFUTURA := $(BUILD_ROOT)/lib/$(PLATFORM)/libfutura.a
 CFLAGS := -std=c2x -ffreestanding -nostdlib -fno-builtin -fno-stack-protector
 CFLAGS += -Wall -Wextra -Werror -g -O2
 CFLAGS += $(ARCH_CFLAGS)
-CFLAGS += -I$(ROOT)/include -I$(OUT)/compositor
+CFLAGS += -I$(ROOT)/include -I$(OUT)/compositor -I$(ROOT)/src/user/libfutura
 CFLAGS += -I$(WAYLAND_INCLUDEDIR) $(WAYLAND_CFLAGS)
 
 CPPFLAGS += -DWAYLAND_MULTI_BUILD=1
