Add syscall numbers, build fixes, and platform-specific paths
- Add O_TMPFILE flag to fcntl.h for temporary file creation
- Add strcpy/strncpy declarations to string.h
- Add network syscall numbers (socket, connect, bind, listen) to syscall_portable.h
- Add file operation syscall numbers (fcntl, unlink, chmod, fchmod, epoll_ctl)
- Fix platform-specific build paths in Makefiles (use $(PLATFORM) in paths)
- Silence unused variable warning in elf64.c (wayland_size used in debug macro)
- Add include guards for O_* flags to prevent redefinition conflicts

These changes improve build system correctness and prepare for expanded
syscall support in userland applications.

--- a/src/user/clients/wl-simple/Makefile
+++ b/src/user/clients/wl-simple/Makefile
@@ -1,9 +1,10 @@
 # SPDX-License-Identifier: MPL-2.0
 
 ROOT := ../../../..
+PLATFORM ?= x86_64
 BUILD_ROOT := $(ROOT)/build
 OBJ_DIR := $(BUILD_ROOT)/obj/user/clients/wl-simple
-BIN_DIR := $(BUILD_ROOT)/bin/user
+BIN_DIR := $(BUILD_ROOT)/bin/$(PLATFORM)/user
 
 include $(ROOT)/mk/wayland.mk
 
@@ -32,9 +33,10 @@ WAYLAND_CFLAGS ?= -I$(WAYLAND_INCLUDEDIR)
 WAYLAND_LDFLAGS ?= -L$(WAYLAND_LIBDIR)
 WAYLAND_LIBS ?= -lwayland-server -lwayland-client -lffi -lpthread -lm -lrt
 
+PLATFORM ?= x86_64
 LDSCRIPT := ../../libfutura/userland_$(PLATFORM).ld
-CRT0 := $(BUILD_ROOT)/lib/crt0.o
-LIBFUTURA := $(BUILD_ROOT)/lib/libfutura.a
+CRT0 := $(BUILD_ROOT)/lib/$(PLATFORM)/crt0.o
+LIBFUTURA := $(BUILD_ROOT)/lib/$(PLATFORM)/libfutura.a
 
 CFLAGS := -std=c2x -ffreestanding -nostdlib -fno-builtin -fno-stack-protector
 CFLAGS += -Wall -Wextra -Werror -g -O2
