Fix winsrv and winstub Makefile library paths
Updated winsrv and winstub Makefiles to use platform-specific library
directory paths (build/lib/x86_64/) instead of build/lib/ to match the
actual build output structure.

Changes:
- src/user/services/winsrv/Makefile: Add PLATFORM variable, update
  LIB_DIR to $(BUILD_DIR)/lib/$(PLATFORM)
- src/user/apps/winstub/Makefile: Add PLATFORM variable, update
  LIB_DIR to $(BUILD_DIR)/lib/$(PLATFORM)

This fixes linker errors when building legacy window server demo
components that couldn't find crt0.o and libfutura.a.

--- a/src/user/apps/winstub/Makefile
+++ b/src/user/apps/winstub/Makefile
@@ -6,10 +6,11 @@ CC := gcc
 LD := ld
 
 ROOT := ../../../..
+PLATFORM ?= x86_64
 BUILD_DIR := $(ROOT)/build
 OBJ_DIR := $(BUILD_DIR)/obj/user/apps/winstub
 BIN_DIR := $(BUILD_DIR)/bin/user
-LIB_DIR := $(BUILD_DIR)/lib
+LIB_DIR := $(BUILD_DIR)/lib/$(PLATFORM)
 
 INCLUDES := -I$(ROOT)/include -I. -I../../services/winsrv
 
