Add Wayland client directories to userland build
Add clients/wl-simple, clients/wl-colorwheel, and clients/wl-term to
USERLAND_DIRS so the Wayland test client binaries are built. This fixes
linker errors for undefined _binary_build_bin_x86_64_user_wl_simple_*
and _binary_build_bin_x86_64_user_wl_colorwheel_* symbols.

--- a/src/user/Makefile
+++ b/src/user/Makefile
@@ -7,7 +7,7 @@ PLATFORM ?= x86_64
 export PLATFORM
 
 # Subdirectories
-USERLAND_DIRS := libfutura init shell cat echo wc fsd posixd futurawayd fbtest stubs services/winsrv apps/winstub
+USERLAND_DIRS := libfutura init shell cat echo wc fsd posixd futurawayd fbtest stubs services/winsrv apps/winstub clients/wl-simple clients/wl-colorwheel clients/wl-term
 
 # Build targets
 .PHONY: all clean $(USERLAND_DIRS)
@@ -16,7 +16,7 @@ USERLAND_DIRS := libfutura init shell cat echo wc fsd posixd futurawayd fbtest s
 all: libfutura $(USERLAND_DIRS)
 
 # Ensure services depend on libfutura
-init shell cat echo wc fsd posixd futurawayd fbtest services/winsrv apps/winstub: libfutura
+init shell cat echo wc fsd posixd futurawayd fbtest services/winsrv apps/winstub clients/wl-simple clients/wl-colorwheel clients/wl-term: libfutura
 
 $(USERLAND_DIRS):
 	@echo "Building $@ for $(PLATFORM)..."
