Implement kernel-level eventfd and epoll_create1 syscalls
Move eventfd and epoll implementations from userland stubs to proper
kernel syscalls for better integration with the Wayland compositor.

Kernel changes:
- Add sys_eventfd2 (#290) with full counter, semaphore mode, wait queues,
  and epoll poll integration via fut_eventfd_poll()
- Add sys_epoll_create1 (#291) with EPOLL_CLOEXEC flag support
- Add include/kernel/eventfd.h for epoll integration header
- Update POSIX shim with handlers for new syscalls
- Fix sys_mkdir/sys_rmdir to use fut_copy_from_user() for safety

Userland changes:
- Simplify libfutura epoll.c/eventfd.c to thin syscall wrappers
- Remove userland stub implementations in favor of kernel syscalls
- Clean up fcntl.c and remove unused posix.c code

Wayland compositor:
- Extend environment variables (XDG_RUNTIME_DIR, WAYLAND_DISPLAY, etc.)
- Add interactive mode detection from kernel cmdline
- Add wayland-autoclose boot flag support

--- a/src/user/compositor/futura-wayland/Makefile
+++ b/src/user/compositor/futura-wayland/Makefile
@@ -79,7 +79,7 @@ LDLIBS := $(WAYLAND_LIBS) $(LIBFUTURA) $(LIBGCC)
 
 all: $(TARGET)
 
-$(TARGET): $(OBJS) | $(BIN_DIR) $(CRT0) $(LIBFUTURA)
+$(TARGET): $(OBJS) $(CRT0) $(LIBFUTURA) | $(BIN_DIR)
 	@echo "LD $@"
 	@$(CC) $(FINAL_LDFLAGS) $(CRT0) $(OBJS) $(LDLIBS) -o $@
 
