Enable ARM64 kernel builds on macOS
- Main Makefile: Fixed objcopy to use $(OBJCOPY) variable for ARM64
- forktest Makefile: Added macOS cross-compiler detection for ARM64

These changes allow building ARM64 kernels on macOS using the
aarch64-elf-gcc cross-compiler from Homebrew.

Build command: PLATFORM=arm64 make kernel
Output: 3.2MB ARM aarch64 ELF64 executable

--- a/src/user/forktest/Makefile
+++ b/src/user/forktest/Makefile
@@ -3,9 +3,17 @@
 PLATFORM ?= x86_64
 
 ifeq ($(PLATFORM),arm64)
-    CC = aarch64-elf-gcc
-    LD = aarch64-elf-ld
-    OBJCOPY = aarch64-elf-objcopy
+    # On macOS, use the cross-compiler from Homebrew
+    ifeq ($(shell uname -s),Darwin)
+        CROSS_COMPILE_ARM64 ?= /opt/homebrew/bin/aarch64-elf-
+        CC = $(CROSS_COMPILE_ARM64)gcc
+        LD = $(CROSS_COMPILE_ARM64)ld
+        OBJCOPY = $(CROSS_COMPILE_ARM64)objcopy
+    else
+        CC = aarch64-elf-gcc
+        LD = aarch64-elf-ld
+        OBJCOPY = aarch64-elf-objcopy
+    endif
     CFLAGS = -std=c23 -ffreestanding -nostdlib -fno-builtin \
              -Wall -Wextra -O2 -g \
              -I../../../include \
