Fix Wayland client crashes: libffi linking and syscall r8 clobber
Two separate issues were causing Wayland client/compositor crashes:

1. libffi symbols undefined in Wayland clients: The client Makefiles
   were missing -static flag, causing the linker to create versioned
   symbol references (e.g., ffi_type_pointer@LIBFFI_BASE_8.0) instead
   of linking the static library symbols. Since Futura has no dynamic
   linker, these symbols resolved to NULL at runtime.

2. Syscall handler corrupts r8: The kernel's int 0x80 handler appears
   to corrupt r8 despite the save/restore code. Added r8 to the syscall
   inline assembly clobber list so GCC won't rely on r8 being preserved
   across syscalls. This is a workaround; the kernel bug should be
   investigated separately.

--- a/src/user/clients/wl-colorwheel/Makefile
+++ b/src/user/clients/wl-colorwheel/Makefile
@@ -47,7 +47,7 @@ ifeq ($(DEBUG_WAYLAND),1)
 CFLAGS += -DDEBUG_WAYLAND
 endif
 
-LDFLAGS := -nostdlib -T $(LDSCRIPT) $(WAYLAND_LDFLAGS)
+LDFLAGS := -nostdlib -static -T $(LDSCRIPT) $(WAYLAND_LDFLAGS)
 LDLIBS := $(WAYLAND_LIBS) $(LIBFUTURA)
 
 .PHONY: all clean
