Add copyright headers to build system Makefiles
Extended copyright header standardization to Makefiles:

- boot/uefi/Makefile: Added MPL-2.0 copyright header
- host/transport/Makefile: Added full copyright (had SPDX-only)
- tests/Makefile: Added full copyright (had SPDX-only)
- third_party/wayland/Makefile: Added full copyright (had SPDX-only)
- tools/Makefile: Added MPL-2.0 copyright header

All build system components now have consistent licensing notices.

--- a/boot/uefi/Makefile
+++ b/boot/uefi/Makefile
@@ -1,4 +1,7 @@
 # Futura OS UEFI Bootloader Makefile
+#
+# Copyright (c) 2025 Kelsi Davis
+# Licensed under the MPL v2.0 — see LICENSE for details.
 
 BUILD_DIR := ../../build
 UEFI_EFI := $(BUILD_DIR)/BOOTX64.EFI
